force-app/main/default/objects/ExternalPayment__x/ExternalPayment__x.object-meta.xml
<CustomObject>
    <description>Payments</description>
    <externalDataSource>OrdersDB</externalDataSource>
    <externalName>Payments</externalName>
    <label>ExternalPayment</label>
    <pluralLabel>ExternalPayments</pluralLabel>
</CustomObject>