force-app/main/default/objects/ExternalPayment__x/fields/dateRequested__c.field-meta.xml
<CustomField>
    <fullName>dateRequested__c</fullName>
    <description>dateRequested</description>
    <externalDeveloperName>dateRequested</externalDeveloperName>
    <label>DateRequested</label>
    <type>DateTime</type>
</CustomField>