force-app/main/default/objects/ExternalPayment__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>